--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h1{
 	font-family:"Times New Roman",serif;
 }
 h2{
-	font:small-caps bold "Trebuchet",sans-serif;
+	font:small-caps bold "sans-serif";
 }
 #magic{
 	background:#ffcc88;
