--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 body{
 	background:#ffccff;
+	width:100;
+	height:100;
 }
 h1{
 	font-family:"Times New Roman",serif;
+	width:100;
+	text-align:center;
 }
 h2{
 	font-family:Arial;
