--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-	background:#ffccff;
+	background:#ffeeff;
 	width:100%;
 	height:100%;
 }
@@ -15,7 +15,7 @@ h2{
 	outline:3px solid black;
 }
 #magic{
-	background:#fc8;
+	background:#ffcc88;
 }
 #details{
 	background:#ffcccc;
