--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,15 @@ h1{
 h2{
 	font-family:Arial;
 }
+#grid{
+	width:100%;
+	height:100%;
+	margin:5px;
+}
 .generic{
 	outline:3px solid black;
-	width:300px;
+	width:50%;
+	height:50%;
 }
 #magic{
 	background:#ffcc88;
