--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,15 @@ h2{
 	width:50%;
 	height:50%;
 }
+.expanded{
+	width:90%;
+}
+.expandable{
+	display:none;
+}
+.expanded.expandable{
+	display:block;
+}
 #magic{
 	background:#ffcc88;
 }
