--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,16 @@ h2{
 	outline:3px solid black;
 	width:50%;
 	height:50%;
+	-webkit-animation: abc .5s;
+	animation:abc .5s;
+}
+@-webkit-keyframes abc {
+    from {width:90%;}
+    to {width:50%;}
+}
+@keyframes abc {
+    from {width:90%;}
+    to {width:50%;}
 }
 .expanded{
 	outline:3px solid black;
