--- a/styles.css
+++ b/styles.css
@@ -16,36 +16,27 @@ h2{
 }
 .generic{
 	outline:3px solid black;
+	min-width:10%;
 	width:50%;
 	height:50%;
-	-webkit-animation: abc .5s;
-	animation:abc .5s;
-}
-@-webkit-keyframes abc {
-    to {width:50%;}
-}
-@keyframes abc {
-    to {width:50%;}
+	-webkit-animation: collapsing .25s;
+	animation:collapsing .25s;
 }
 .expanded{
 	outline:3px solid black;
 	width:90%;
-	-webkit-animation:cba .5s;
-	animation:cba .5s;
-}
-@-webkit-keyframes cba{
-	from{width:50%;}
-	to{width:90%;}
-}
-@keyframes cba{
-	from{width:50%;}
-	to{width:90%;}
+	-webkit-animation:expanding .25s;
+	animation:expanding .25s;
 }
 .generic .expandable{
 	display:none;
+	-webkit-animation:texpanding .25s;
+	animation:texpanding .25s;
 }
 .expanded .expandable{
 	display:block;
+	-webkit-animation:tcoollapsing .25s;
+	animation:tcollapsing .25s;
 }
 #magic{
 	background:#ffcc88;
@@ -61,7 +52,11 @@ h2{
 }
 .small{
 	font-size:20px;
+	-webkit-animation:enlarging .17s;
+	animation:enlarging .17s;
 }
 .big{
 	font-size:50px;
+	-webkit-animation:shrinking .17s;
+	animation:shrinking .17s;
 }
