--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@ h2{
 .expanded .expandable .small, .expanded .expandable .smallNew{
 	font-size:20px;
 }
+.expanded .expandable .smallNew{
+	-webkit-animation:texpanding .17s;
+	animation:texpanding .17s;
+}
 .expanded .expandable .small{
 	-webkit-animation:shrinking .17s;
 	animation:shrinking .17s;
