--- a/styles.css
+++ b/styles.css
@@ -22,18 +22,22 @@ h2{
 	-webkit-animation: collapsing .25s;
 	animation:collapsing .25s;
 }
-.expanded{
+.expanded,.dexpanded{
 	outline:3px solid black;
 	width:90%;
 	-webkit-animation:expanding .25s;
 	animation:expanding .25s;
+}
+.dexpanded{
+	-webkit-animation-delay:.25s;
+	animation-delay:.25s;
 }
 .generic .expandable,.genericNew .expandable{
 	font-size:0px;
 	-webkit-animation:tcollapsing .25s;
 	animation:tcollapsing .25s;
 }
-.expanded .expandable{
+.expanded .expandable,.dexpanded .expandable{
 	font-size:20px;
 	margin:0px 30px;
 	-webkit-animation:texpanding .25s;
@@ -51,31 +55,31 @@ h2{
 #people{
 	background:#ccccff;
 }
-.expanded .expandable .small, .expanded .expandable .smallNew{
+.expanded .small, .expanded .smallNew,.dexpanded .small, .dexpanded .smallNew{
 	font-size:20px;
 }
-.expanded .expandable .smallNew{
+.expanded .smallNew,.dexpanded .smallNew{
 	-webkit-animation:texpanding .25s;
 	animation:texpanding .25s;
 }
 
-.generic .expandable .small{
+.generic .small{
 	-webkit-animation:tcollapsing .25s;
 	animation:tcollapsing .25s;
 }
 
-.generic .expandable .big{
+.generic .big{
 	font-size:0px;
 	-webkit-animation:btcollapsing .25s;
 	animation:btcollapsing .25s;
 }
 
-.expanded .expandable .small{
+.expanded .small,.dexpanded .small{
 	-webkit-animation:shrinking .17s;
 	animation:shrinking .17s;
 }
 
-.expanded .expandable .big{
+.expanded .big,.dexpanded .big{
 	font-size:40px;
 	-webkit-animation:enlarging .17s;
 	animation:enlarging .17s;
