--- a/animations.css
+++ b/animations.css
@@ -39,30 +39,30 @@
 
 
 @-webkit-keyframes btcollapsing{
-	from{font-size:40px;}
-	to{font-size:0px;}
+	from{font-size:40px;margin:50px 20px;}
+	to{font-size:0px;margin:0px 0px;}
 }
 @keyframes btcollapsing{
-	from{font-size:40px;}
-	to{font-size:0px;}
+	from{font-size:40px;margin:50px 20px;}
+	to{font-size:0px;margin:0px 0px;}
 }
 
 
 @-webkit-keyframes enlarging{
-	from{font-size:20px;}
-	to{font-size:40px;}
+	from{font-size:20px;margin:20px 20px;}
+	to{font-size:40px;margin:50px 20px;}
 }
 @keyframes enlarging{
-	from{font-size:20px;}
-	to{font-size:40px;}
+	from{font-size:20px;margin:20px 20px;}
+	to{font-size:40px;margin:50px 20px;}
 }
 
 
 @-webkit-keyframes shrinking{
-	from{font-size:40px;}
-	to{font-size:20px;}
+	from{font-size:40px;margin:50px 20px;}
+	to{font-size:20px;margin:20px 20px;}
 }
 @keyframes shrinking{
-	from{font-size:40px;}
-	to{font-size:20px;}
+	from{font-size:40px;margin:50px 20px;}
+	to{font-size:20px;margin:20px 20px;}
 }
