--- a/styles.css
+++ b/styles.css
@@ -13,32 +13,28 @@ h2{
 	width:90%;
 	margin:0% 5%;
 }
-.genericNew, .generic{
+.generic{
 	outline:3px solid black;
 	width:10%;
 	height:150px;
-}
-.generic{
-	-webkit-animation: collapsing .25s;
-	animation:collapsing .25s;
+	-webkit-transistion:width .2s, height .2s;
+	transistion:width .2s, height .2s;
 }
 .expanded{
 	outline:3px solid black;
 	width:90%;
-	-webkit-animation:expanding .25s;
-	animation:expanding .25s;
-}
-.generic .expandable,.genericNew .expandable{
-	font-size:0px;
+	-webkit-transition:width .25s;
+	transistion:width .2s;
 }
 .generic .expandable{
-	-webkit-animation:tcollapsing .25s;
-	animation:tcollapsing .25s;
+	font-size:0px;
+	-webkit-transition:font-size .25s;
+	transition:font-size .25s;
 }
 .expanded .expandable{
 	margin:0px 30px;
-	-webkit-animation:texpanding .25s;
-	animation:texpanding .25s;
+	-webkit-transition:margin .25s;
+	transition:margin .25s;
 }
 #magic{
 	background:#ffcc88;
@@ -52,30 +48,16 @@ h2{
 #people{
 	background:#ccccff;
 }
-.expanded .small, .expanded .smallNew{
-	font-size:20px;
-	-webkit-animation:texpanding .25s;
-	animation:texpanding .25s;
-}
-.generic .small{
-	-webkit-animation:tcollapsing .25s;
-	animation:tcollapsing .25s;
-}
-
-.generic .big{
-	font-size:0px;
-	-webkit-animation:btcollapsing .25s;
-	animation:btcollapsing .25s;
-}
-
 .expanded .small{
-	-webkit-animation:shrinking .17s;
-	animation:shrinking .17s;
+	font-size:20px;
+	margin:20px;
+	-webkit-transition:font-size .17s, margin .17s;
+	transition:font-size .17s,margin .17s;
 }
 
 .expanded .big{
 	font-size:40px;
 	margin:50px 20px;
-	-webkit-animation:enlarging .17s;
-	animation:enlarging .17s;
+	-webkit-transition:font-size .17s, margin .17s;
+	transition:font-size .17s,margin .17s;
 }
