--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 body{
-	background:#ffeeff;
+	background-image:url("http://upload.wikimedia.org/wikipedia/commons/e/eb/Lake_of_the_Woods_Mahomet_Illinois.jpg");
+	background-attachment:fixed;
+}
+#overlay{
+	background-color:rgba(255,255,255,.5);
+	height:100%;
+	width:100%;
 }
 h1{
 	font-family:"Times New Roman",serif;
@@ -25,6 +31,9 @@ h2{
 	width:90%;
 	-webkit-transition:width .25s;
 	transistion:width .2s;
+}
+td{
+	text-align:center;
 }
 .generic .expandable{
 	font-size:0px;
