--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 body{
-	background-image:url("http://upload.wikimedia.org/wikipedia/commons/e/eb/Lake_of_the_Woods_Mahomet_Illinois.jpg");
+	background-image:url("https://drive.google.com/thumbnail?id=0BwOF3oVkUv8wcVdUNFQ0WEZNaGM&authuser=0&v=1418089495298&sz=w1342-h537");
 	background-attachment:fixed;
-}
-#overlay{
-	background-color:rgba(255,255,255,.5);
-	height:100%;
-	width:100%;
 }
 h1{
 	font-family:"Times New Roman",serif;
