--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
 	background-image:url("https://drive.google.com/thumbnail?id=0BwOF3oVkUv8wcVdUNFQ0WEZNaGM&authuser=0&v=1418089495298&sz=w1342-h537");
-	background-attachment:fixed;
+	background-size:100% 100%;
 }
 h1{
 	font-family:"Times New Roman",serif;
